# cantuscatholici-backend

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  compose.dev.yaml  compose.yaml  conftest.py  pyproject.toml  pytest.ini  seed_db.py
.github/actions/: project-setup.yml
.github/actions/project-setup/: action.yml
.github/workflows/: check.yml  commitlint.yml  docker-ci.yml  test.yml
alembic/: env.py
alembic/versions/: 3814b7f3bdf4_user_timestamp_defaults.py  6e81b0b10235_initial_db_tables.py  7acb1f0aa6e5_inital_db_schema.py  add_refresh_tokens_table.py  add_song_tags_table.py  b7_add_lyrics_support.py  p11_add_song_id_to_user_content.py  p12_add_review_status.py  p13_extend_calendar.py
app/: config.py  database.py  main.py  models.py  seed.py
app/auth/: permissions.py
app/author/: models.py
app/calendar/: exceptions.py  models.py  router.py  service.py
app/common/: exceptions.py
app/common/schemas/: pagination.py
app/content/: exceptions.py  models.py  router.py  schema.py  service.py
app/content_base/: models.py
app/db/: author.py  celebration.py  celebration_category.py  celebration_part.py  person.py  review.py  song.py  static_content.py  tag.py  tag_category.py
app/models/: __init__.py  author.py  calendar.py  celebration.py  celebration_category.py  celebration_part.py  content.py  content_base.py  person.py  review.py  song.py  song_arrangement.py  static_content.py  tag.py  tag_category.py  user.py  user_role.py
app/person/: exceptions.py  models.py  router.py  schema.py  service.py
app/review/: exceptions.py  models.py  router.py  service.py
app/routes/: author.py  celebration.py  celebration_category.py  celebration_part.py  person.py  review.py  song.py  static_content.py  tag.py  tag_tegory.py  user.py  user_role.py
app/schemas/: author.py  celebration.py  celebration_category.py  celebration_part.py  person.py  review.py  song.py  static_content.py  tag.py  tag_category.py  user.py
app/services/: author.py  celebration.py  celebration_category.py  celebration_part.py  person.py  review.py  song.py  static_content.py  tag.py  tag_category.py  user.py  user_role.py
app/song/: associations.py  exceptions.py  models.py  router.py  schema.py  service.py
app/static_content/: exceptions.py  models.py  router.py  service.py
app/tag/: exceptions.py  models.py  router.py  schema.py  service.py
app/tag_category/: exceptions.py  models.py  router.py  schema.py  service.py
app/tests/author/: test_author.py  test_author_models.py
app/tests/calendar/: test_calendar.py  test_calendar_models.py
app/tests/content/: test_content.py  test_content_models.py
app/tests/content_base/: test_content_base.py  test_content_base_models.py
app/tests/database/: test_db.py
app/tests/person/: test_person.py  test_person_models.py
app/tests/review/: test_review.py  test_review_models.py
app/tests/song/: test_song.py  test_song_models.py
app/tests/src/: fixtures.py
app/tests/static_content/: test_static_content_models.py
app/tests/tag/: test_tag.py  test_tag_models.py
app/tests/tag_category/: test_tag_category.py  test_tag_category_models.py
app/tests/user/: test_user.py  test_user_models.py  test_user_router.py
app/tests/user_role/: test_user_role_models.py  test_user_role_router.py
app/transposition/: router.py  service.py
app/user/: auth.py  exceptions.py  models.py  router.py  schema.py  service.py
app/user_content/: exceptions.py  router.py  schema.py  service.py
app/user_role/: models.py  router.py  schema.py  service.py
docs/: backend.md  mvp.md
docs/data/: celebration_categories.json  tags-and-categories.md
