[project]
name = "cantuscatholici-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "passlib[argon2,argon2-cffi]>=1.7.4",
    "phonenumbers>=9.0.12",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.10.1",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.13.0",
    "sqlalchemy>=2.0.41",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # arguemnts unused
    "ARG001", # unused arguments in function
    "FAST", # fastapi checks
    "ERA", # remove commented out code
    "ASYNC", # async function checking
    "COM", # include trailing commas
    "RUF", # lets try ruff rules
    "UP", # pyupgrade, use the best syntax possible
    "ICN", # import conventions
    "LOG", # logging checking
    "SIM", # simplify code please
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["app"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv"
]
